--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -124,7 +124,7 @@ Entre los servicios que ofrece tenemos:
 	\item \textbf{Real Time Data Base:} base de datos simples en tiempo real, si fuera necesario tener que guardar música, video o fotos, tiene otra parte que es la de Storage.
 	\item \textbf{Crash reporting:} herramienta para el reporte de errores que se producen en la aplicación.
 	\item \textbf{Autentication:} integración con la mayor cantidad de aplicaciones de redes sociales en las que su API permite esto. Obviamente la propia Google es una de ellas. Lo podemos ver en la siguiente imagen~\ref{fig:inicio}:
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\centering
 		\includegraphics[width=1\textwidth]{teoria/inicio.png}
 		\caption{Inicio de sesión}\label{fig:inicio}
@@ -133,7 +133,7 @@ Entre los servicios que ofrece tenemos:
 	\item \textbf{Remote config:} hacer cambios internos del funcionamiento de la aplicación sin tener que recomplilar o actualizarla.
 	\item \textbf{Hosting:} servidor donde podemos publicar una página web.
 	\item \textbf{Análisis:} mediante las analíticas que ofrece~\ref{fig:numerousers}, sirve como herramienta de toma de decisiones. Pudiendo optimizar a que mercados dirigirse mediante una estrategia de marketing.
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\centering
 		\includegraphics[width=1\textwidth]{teoria/numerousers.png}
 		\caption{Ejemplo de Analytics}\label{fig:numerousers}
