--- a/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -1,4 +1,28 @@
 \capitulo{7}{Conclusiones y Líneas de trabajo futuras}
 
-Todo proyecto debe incluir las conclusiones que se derivan de su desarrollo. Éstas pueden ser de diferente índole, dependiendo de la tipología del proyecto, pero normalmente van a estar presentes un conjunto de conclusiones relacionadas con los resultados del proyecto y un conjunto de conclusiones técnicas. 
-Además, resulta muy útil realizar un informe crítico indicando cómo se puede mejorar el proyecto, o cómo se puede continuar trabajando en la línea del proyecto realizado. 
+En este apéndice se expone las conclusiones tras la finalización del proyecto final de grado, así como todas las posibles ideas o líneas de trabajo futuras, con el fin de que el proyecto mantenga una continuidad.
+
+\section{Conclusiones}
+
+\begin{itemize}
+	\item El objetivo general del proyecto se ha cumplido, ya que todos los requisitos funcionales, como los no funcionales, fueron realizados de manera satisfactoria. Aunque es revisable la mejora de ciertos aspectos, como el diseño de algunas ventanas de la aplicación.
+		
+	\item Todo el proceso que engloba crear una aplicación, desde la adquisición de los conocimientos, el desarrollo, el diseño, revisiones de producto, la planificación, hasta el despliegue final. 
+	
+	Indica que se han tocado la mayoría de los conocimientos adquiridos durante el grado, pero que aún así es necesario el constante avance formativo.
+	
+	\item Adquirir los conocimientos necesarios para la creación de una aplicación en Flutter, ya que es un SDK de gran versatilidad, permitiendo hacer aplicaciones en un tiempo menor.
+	
+	 Aprender también las herramientas que ofrecidas por parte de Google como Firebase o adMob. \emph{Tools} que desconocía, pero que dan gran valor añadido al producto final.
+	
+	\item Durante todo el proyecto se usaron gran variedad de aplicaciones, herramientas o dispositivos que ayudaron a mejorar la calidad, rendimiento y funcionalidad del producto final o de algunos de los procesos intermedios. Esto implica tener que especializarse en cada una de ellas, lo que consume recursos temporales.
+	
+	Pero a la larga este conocimiento aprendido ayudará a tener mejores productos en el futuro.
+	
+	\item Lidiar con gran incertidumbre, esto se debe que a la hora de planificar es difícil estimar correctamente las horas. Lo que en próximos proyectos puede ser una complicación. Por lo que es una cosa que tengo que mejorar.
+	
+	Es de gran importancia ajustarse lo máximo posible a la realidad y no pecar de pesimista como es mi caso, ya que planifico más horas de las que luego realmente se invierten.
+	
+	\item La investigación como parte fundamental a la hora de añadir nuevas funcionalidades al producto como el \emph{sign in} de la aplicación o la publicidad, entre otras.
+	
+\end{itemize}
