--- a/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/docs/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -26,3 +26,31 @@ En este apéndice se expone las conclusiones tras la finalización del proyecto 
 	\item La investigación como parte fundamental a la hora de añadir nuevas funcionalidades al producto como el \emph{sign in} de la aplicación o la publicidad, entre otras.
 	
 \end{itemize}
+
+En definitiva, personalmente estoy muy contento de haber trabajado duro y haber conseguido una aplicación, ya que desconocía la programación en Android, lo que me ha hecho crecer como persona, pero sobretodo en el ámbito profesional.
+
+
+\section{Líneas de trabajo futuras}
+
+
+\begin{itemize}
+\item La idea es que la aplicación retenga el mayor tiempo posible a los usuarios para publicidad. Para ello la biblioteca de juegos tiene que seguir creciendo. 
+
+Estos nuevos juegos, se deben de planificar en base a la publicidad para sacar el mayor retorno económico.
+
+\item Internacionalización de la aplicación, para estar disponible en un mayor número de países, de tal manera que el mercado que abarque sea más amplio.
+
+\item Integración de test automáticos como de nuevas metodologías de desarrollo dirigido por test (TDD). Esto mejoraría sustancialmente el rendimiento del programador.
+
+\item Estudio de nuevas herramientas o frameworks destinados a la creación de videojuegos. De tal forma que se pueda migrar los dos juegos actuales, con el fin de ganar un mayor rendimiento.
+
+\item Añadir una inteligencia artificial al juego del cuatro en raya, de tal manera que no solo se pueda jugar online, si no contra la CPU. Como idea esta podría integrar tres niveles de complejidad: facíl, medio y experto. Dentro de la propia Firebase de Google tenemos herramientas de \emph{Cloud computing}, como el \emph{ML kit (Machine learning kit)}. 
+
+Este kit tiene herramientas muy conocidas de Google como puede ser el reconocimiento de texto, etiquetado de las imágenes o detección de las caras, pero se pueden añadir nuestro propios modelos.
+
+\item Realizar el despligue de la aplicación en la tienda de Apple \emph{App Store}, para dispositivos iOS. Y la creación de un hosting donde podamos alojar la aplicación web.
+	
+\item Integración y exploración de las herramientas de videojuegos como \emph{Play juegos} de Google y la de Apple con su \emph{Game Center}. Esto podría permitirnos las compras in-app.
+
+\item Implementación de algún juego de realidad aumentada con la integración de la publicidad también.
+\end{itemize}
